2014-11-02	Juergen Borleis <jbe@pengutronix.de

	* Kernel 3.12:
		- keep in sync with stable release .31
	* Kernel 3.14:
		- keep in sync with stable release .23
	* Kernel 3.16:
		- keep in sync with stabel release .7

2014-09-29	Juergen Borleis <jbe@pengutronix.de

	* Kernel-3.2:
		- keep in sync with stable release .63
	* Kernel-3.4:
		- keep in sync with stable release .104
	* Kernel 3.12:
		- keep in sync with stable release .28
	* Kernel 3.14:
		- keep in sync with stable release .19
	* Kernel 3.15:
		- keep in sync with stabel release .7
	* Kernel 3.16:
		- use most recent Linux release
		- keep in sync with stable release .3

2014-07-20	Juergen Borleis <jbe@pengutronix.de

	* Platform: use ptxdist-2014.07.0
	* Kernel 3.15:
		- use most recent Linux release
		- keep in sync with stabel release .6

2014-07-19	Juergen Borleis <jbe@pengutronix.de

	* Kernel-3.2:
		- keep in sync with stable release .61
	* Kernel-3.4:
		- keep in sync with stable release .99
	* Kernel 3.10:
		- mark this kernel as broken on the Mini2440
	* Kernel 3.12:
		- keep in sync with stable release .24
	* Kernel 3.14:
		- keep in sync with stable release .13
		- use most recent Linux release for the 64 MiB Mini2440 as well

2014-04-30	Juergen Borleis <jbe@pengutronix.de

	* Kernel-3.11, 3.12, 3.13, 3.14
		- disable all symbols for debugging/ksymoops to make these
		  kernel fit again into the 2 MiB NAND kernel partition

2014-04-27	Juergen Borleis <jbe@pengutronix.de

	* Kernel-3.4:
		- keep in sync with stable release .88
	* Kernel 3.10:
		- keep in sync with stable release .38
	* Kernel 3.14:
		- keep in sync with stable release .2

2014-04-26	Juergen Borleis <jbe@pengutronix.de

	* Kernel-3.2:
		- keep in sync with stable release .57
	* Kernel-3.4:
		- keep in sync with stable release .87
	* Kernel 3.10:
		- keep in sync with stable release .37
	* Kernel 3.11:
		- mark this kernel as broken on the Mini2440
	* Kernel 3.12:
		- keep in sync with stable release .17
	* Kernel 3.13: